[package]
name = "stonks"
version = "0.1.0"
authors = ["Samuel Wallace Stegall <stegall@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphavantage = "0.5.0"
dotenv = "0.14.1"
dotenv_codegen = "0.14.1"
structopt = "0.3.4"